--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img class="fon1" src="img/indexfon1.png">
 
 <header>
-    <div id="zagolovok">код единства</div> 
+    <div id="zagolovok"><a href="index.html">код единства</a></div> 
             <div id="navig">
                 <a href="index.html"><p class="glavn">Главная</p></a>
 
