--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
         <!-- второй фон -->
 
-    
+    <div id="numbers">
+        <p id="narod">0+</p> <p class="narodtxt">народов, сохраняющих свою уникальность.</p>
+        <p id="lang">0+</p> <p class="langtxt">языков и диалектов в живом общении.</p>
+        <p id="time">11</p> <p class="timetxt">часовых поясов объединенных одной целью.</p>
+    </div>
     <img id="fon2" src="img/indexfon2.png">
 </div>
     
@@ -68,6 +72,6 @@
 </div>
 
 
-
+<script src="index.js"></script>
 </body>
 </html>
